@@ -23,6 +23,7 @@ import (
 	"testing"
 	"time"
 
+	"github.com/gofrs/uuid"
 	"github.com/stretchr/testify/assert"
 
 	"github.com/elastic/beats/libbeat/beat"
@@ -137,7 +138,7 @@ func TestAutodiscover(t *testing.T) {
 	// Register mock autodiscover provider
 	busChan := make(chan bus.Bus, 1)
 	Registry = NewRegistry()
-	Registry.AddProvider("mock", func(b bus.Bus, c *common.Config) (Provider, error) {
+	Registry.AddProvider("mock", func(b bus.Bus, uuid uuid.UUID, c *common.Config) (Provider, error) {
 		// intercept bus to mock events
 		busChan <- b
 
@@ -173,7 +174,9 @@ func TestAutodiscover(t *testing.T) {
 
 	// Test start event
 	eventBus.Publish(bus.Event{
-		"start": true,
+		"id":       "foo",
+		"provider": "mock",
+		"start":    true,
 		"meta": common.MapStr{
 			"foo": "bar",
 		},
@@ -182,14 +185,16 @@ func TestAutodiscover(t *testing.T) {
 
 	runners := adapter.Runners()
 	assert.Equal(t, len(runners), 1)
-	assert.Equal(t, len(autodiscover.configs), 1)
+	assert.Equal(t, len(autodiscover.configs["mock:foo"]), 1)
 	assert.Equal(t, runners[0].meta.Get()["foo"], "bar")
 	assert.True(t, runners[0].started)
 	assert.False(t, runners[0].stopped)
 
 	// Test update
 	eventBus.Publish(bus.Event{
-		"start": true,
+		"id":       "foo",
+		"provider": "mock",
+		"start":    true,
 		"meta": common.MapStr{
 			"foo": "baz",
 		},
@@ -198,20 +203,24 @@ func TestAutodiscover(t *testing.T) {
 
 	runners = adapter.Runners()
 	assert.Equal(t, len(runners), 1)
-	assert.Equal(t, len(autodiscover.configs), 1)
+	assert.Equal(t, len(autodiscover.configs["mock:foo"]), 1)
 	assert.Equal(t, runners[0].meta.Get()["foo"], "baz") // meta is updated
 	assert.True(t, runners[0].started)
 	assert.False(t, runners[0].stopped)
 
 	// Test stop/start
 	eventBus.Publish(bus.Event{
-		"stop": true,
+		"id":       "foo",
+		"provider": "mock",
+		"stop":     true,
 		"meta": common.MapStr{
 			"foo": "baz",
 		},
 	})
 	eventBus.Publish(bus.Event{
-		"start": true,
+		"id":       "foo",
+		"provider": "mock",
+		"start":    true,
 		"meta": common.MapStr{
 			"foo": "baz",
 		},
@@ -220,7 +229,7 @@ func TestAutodiscover(t *testing.T) {
 
 	runners = adapter.Runners()
 	assert.Equal(t, len(runners), 2)
-	assert.Equal(t, len(autodiscover.configs), 1)
+	assert.Equal(t, len(autodiscover.configs["mock:foo"]), 1)
 	assert.True(t, runners[0].stopped)
 	assert.Equal(t, runners[1].meta.Get()["foo"], "baz")
 	assert.True(t, runners[1].started)
@@ -228,7 +237,9 @@ func TestAutodiscover(t *testing.T) {
 
 	// Test stop event
 	eventBus.Publish(bus.Event{
-		"stop": true,
+		"id":       "foo",
+		"provider": "mock",
+		"stop":     true,
 		"meta": common.MapStr{
 			"foo": "baz",
 		},
@@ -237,7 +248,7 @@ func TestAutodiscover(t *testing.T) {
 
 	runners = adapter.Runners()
 	assert.Equal(t, len(runners), 2)
-	assert.Equal(t, len(autodiscover.configs), 0)
+	assert.Equal(t, len(autodiscover.configs["mock:foo"]), 0)
 	assert.Equal(t, runners[1].meta.Get()["foo"], "baz")
 	assert.True(t, runners[1].started)
 	assert.True(t, runners[1].stopped)
@@ -248,7 +259,7 @@ func TestAutodiscoverHash(t *testing.T) {
 	busChan := make(chan bus.Bus, 1)
 
 	Registry = NewRegistry()
-	Registry.AddProvider("mock", func(b bus.Bus, c *common.Config) (Provider, error) {
+	Registry.AddProvider("mock", func(b bus.Bus, uuid uuid.UUID, c *common.Config) (Provider, error) {
 		// intercept bus to mock events
 		busChan <- b
 
@@ -287,7 +298,9 @@ func TestAutodiscoverHash(t *testing.T) {
 
 	// Test start event
 	eventBus.Publish(bus.Event{
-		"start": true,
+		"id":       "foo",
+		"provider": "mock",
+		"start":    true,
 		"meta": common.MapStr{
 			"foo": "bar",
 		},
@@ -296,7 +309,7 @@ func TestAutodiscoverHash(t *testing.T) {
 
 	runners := adapter.Runners()
 	assert.Equal(t, len(runners), 2)
-	assert.Equal(t, len(autodiscover.configs), 2)
+	assert.Equal(t, len(autodiscover.configs["mock:foo"]), 2)
 	assert.Equal(t, runners[0].meta.Get()["foo"], "bar")
 	assert.True(t, runners[0].started)
 	assert.False(t, runners[0].stopped)
@@ -309,7 +322,7 @@ func TestAutodiscoverWithConfigCheckFailures(t *testing.T) {
 	// Register mock autodiscover provider
 	busChan := make(chan bus.Bus, 1)
 	Registry = NewRegistry()
-	Registry.AddProvider("mock", func(b bus.Bus, c *common.Config) (Provider, error) {
+	Registry.AddProvider("mock", func(b bus.Bus, uuid uuid.UUID, c *common.Config) (Provider, error) {
 		// intercept bus to mock events
 		busChan <- b
 
@@ -348,7 +361,9 @@ func TestAutodiscoverWithConfigCheckFailures(t *testing.T) {
 
 	// Test start event
 	eventBus.Publish(bus.Event{
-		"start": true,
+		"id":       "foo",
+		"provider": "mock",
+		"start":    true,
 		"meta": common.MapStr{
 			"foo": "bar",
 		},
@@ -356,7 +371,7 @@ func TestAutodiscoverWithConfigCheckFailures(t *testing.T) {
 
 	// As only the second config is valid, total runners will be 1
 	wait(t, func() bool { return len(adapter.Runners()) == 1 })
-	assert.Equal(t, 1, len(autodiscover.configs))
+	assert.Equal(t, 1, len(autodiscover.configs["mock:foo"]))
 }
 
 func wait(t *testing.T, test func() bool) {
