@@ -21,6 +21,8 @@ import (
 	"fmt"
 	"strings"
 
+	"github.com/gofrs/uuid"
+
 	"github.com/elastic/beats/libbeat/cfgfile"
 	"github.com/elastic/beats/libbeat/common"
 	"github.com/elastic/beats/libbeat/common/bus"
@@ -33,7 +35,7 @@ type Provider interface {
 }
 
 // ProviderBuilder creates a new provider based on the given config and returns it
-type ProviderBuilder func(bus.Bus, *common.Config) (Provider, error)
+type ProviderBuilder func(bus.Bus, uuid.UUID, *common.Config) (Provider, error)
 
 // AddProvider registers a new ProviderBuilder
 func (r *registry) AddProvider(name string, provider ProviderBuilder) error {
@@ -80,5 +82,10 @@ func (r *registry) BuildProvider(bus bus.Bus, c *common.Config) (Provider, error
 		return nil, fmt.Errorf("Unknown autodiscover provider %s", config.Type)
 	}
 
-	return builder(bus, c)
+	uuid, err := uuid.NewV4()
+	if err != nil {
+		return nil, err
+	}
+
+	return builder(bus, uuid, c)
 }
