@@ -18,6 +18,8 @@
 package docker
 
 import (
+	"github.com/gofrs/uuid"
+
 	"github.com/elastic/beats/libbeat/autodiscover"
 	"github.com/elastic/beats/libbeat/autodiscover/builder"
 	"github.com/elastic/beats/libbeat/autodiscover/template"
@@ -37,6 +39,7 @@ func init() {
 type Provider struct {
 	config        *Config
 	bus           bus.Bus
+	uuid          uuid.UUID
 	builders      autodiscover.Builders
 	appenders     autodiscover.Appenders
 	watcher       docker.Watcher
@@ -47,7 +50,7 @@ type Provider struct {
 }
 
 // AutodiscoverBuilder builds and returns an autodiscover provider
-func AutodiscoverBuilder(bus bus.Bus, c *common.Config) (autodiscover.Provider, error) {
+func AutodiscoverBuilder(bus bus.Bus, uuid uuid.UUID, c *common.Config) (autodiscover.Provider, error) {
 	cfgwarn.Beta("The docker autodiscover is beta")
 	config := defaultConfig()
 	err := c.Unpack(&config)
@@ -85,6 +88,7 @@ func AutodiscoverBuilder(bus bus.Bus, c *common.Config) (autodiscover.Provider, 
 	return &Provider{
 		config:        config,
 		bus:           bus,
+		uuid:          uuid,
 		builders:      builders,
 		appenders:     appenders,
 		templates:     mapper,
@@ -142,9 +146,11 @@ func (d *Provider) emitContainer(event bus.Event, flag string) {
 	// Without this check there would be overlapping configurations with and without ports.
 	if len(container.Ports) == 0 {
 		event := bus.Event{
-			flag:     true,
-			"host":   host,
-			"docker": meta,
+			"provider": d.uuid,
+			"id":       container.ID,
+			flag:       true,
+			"host":     host,
+			"docker":   meta,
 			"meta": common.MapStr{
 				"docker": meta,
 			},
@@ -156,10 +162,12 @@ func (d *Provider) emitContainer(event bus.Event, flag string) {
 	// Emit container container and port information
 	for _, port := range container.Ports {
 		event := bus.Event{
-			flag:     true,
-			"host":   host,
-			"port":   port.PrivatePort,
-			"docker": meta,
+			"provider": d.uuid,
+			"id":       container.ID,
+			flag:       true,
+			"host":     host,
+			"port":     port.PrivatePort,
+			"docker":   meta,
 			"meta": common.MapStr{
 				"docker": meta,
 			},
