@@ -23,6 +23,7 @@ import (
 	"testing"
 	"time"
 
+	"github.com/gofrs/uuid"
 	"github.com/stretchr/testify/assert"
 
 	"github.com/elastic/beats/libbeat/common"
@@ -37,9 +38,13 @@ func TestDockerStart(t *testing.T) {
 		t.Fatal(err)
 	}
 
+	UUID, err := uuid.NewV4()
+	if err != nil {
+		t.Fatal(err)
+	}
 	bus := bus.New("test")
 	config := common.NewConfig()
-	provider, err := AutodiscoverBuilder(bus, config)
+	provider, err := AutodiscoverBuilder(bus, UUID, config)
 	if err != nil {
 		t.Fatal(err)
 	}
